# pogo-utils

./: .gitignore  CMakeLists.txt  README.md
conf/: heading_PID.yaml  photostart.yaml  test.yaml
examples/MLP_Q1_15/: main.c
examples/MLP_int8/: main.c
examples/MLP_int8_MNIST/: main.c  mnist_mlp_params.c  train_mnist_qat_to_c.py
examples/TRM_int8/: main.c
examples/distributed_MLP_int8_MNIST/: mnist.c  mnist_mlp_pranc_params.c  train_mnist_qat_to_c.py
examples/fixp/: Makefile  bench_fixp.c  plot.py
examples/heading_PID/: main.c
examples/heading_detection/: Makefile  main.c
examples/hit/: main.c
examples/kinematics/: main.c
examples/oneplusone_es/: main.c
examples/optim/: main.c
examples/pgpe/: main.c
examples/photostart/: main.c
examples/sep_cmaes/: main.c
examples/social_learning/: main.c
examples/spsa/: main.c
examples/tiny_alloc/: main.c
examples/wall_avoidance/: run_and_tumble.c
examples/wall_avoidance_heading/: run_and_tumble.c
src/pogo-utils/: MLP_Q1_15.h  MLP_int8.h  MLP_int8_pranc.h  TRM_int8.h  fixp.c  fixp.h  fixp_base.h  fixp_q16_16.h  fixp_q1_15.h  fixp_q6_10.h  fixp_q8_24.h  heading_PID.c  heading_PID.h  heading_detection.c  heading_detection.h  hit.c  hit.h  kinematics.c  kinematics.h  oneplusone_es.c  oneplusone_es.h  optim.c  optim.h  pgpe.c  pgpe.h  photostart.c  photostart.h  sep_cmaes.c  sep_cmaes.h  social_learning.c  social_learning.h  spsa.c  spsa.h  tiny_alloc.c  tiny_alloc.h  version.h  wall_avoidance.c  wall_avoidance.h  wall_avoidance_heading.c  wall_avoidance_heading.h
